syntax = "proto3";

package v2.service.message;

import "proto/entity/post/post.proto";

option go_package = "github.com/dtc03012/me/protobuf/proto/service/message";

message UploadPostRequest {
  entity.post.data data = 1;
}

message UploadPostResponse {
}

message FetchPostsRequest {
  int32 row = 1;
  int32 size = 2;
}

message FetchPostsResponse {
  repeated entity.post.data data = 1;
}